			CVSps project news

3.5 @
  Remove the --test-log option now that cvsps has its own test suite.

3.4 @ 2013-01-01
  Incorporate Heiko Voight's patch solving some time-skew cases.
  The git-tree tests for cvsps are now completely merged into the test suite. 
  Code passes Coverity auditing.

3.3 @ 2012-12-30
  There's a new -A option that does author-name mapping in the expected way.
  There's a new -R option that writes out a revision map.
  cvsps run from within a repository directory will do the right thing.
  A bug that could garble translations of branchy repositories has been fixed.

3.2 @ 2012-12-24
  DEPRECATION WARNING: non-fast-export reporting may be removed in the future.
  The tool now always runs in cvs_direct client mode for better performance.
  Multiple tags per revision will be reported (previously only the latest was).
  Local CVS commands are no longer used.  Caching and -x are gone.
  The ever-malfunctioning -A option has been removed.

3.1 @ 2012-12-22
  If the CVS version is new enough to do commitids, they are used.
  Removed the --bkcvs option, as bitkeeper's kernel CVS export is gone.
  Can now handle versions that use CVSACL.

3.0 @ 2012-12-20
  New maintainer is Eric S. Raymond.
  The --fast-export option allows dumping the history as a git import stream.

2.2b1
- add a new line item in the PatchSet output which indicates which 
  branches fork off from after this PatchSet.  This is actually
  the only way to correctly indicate the branching.  The 'Ancestor
  Branch' thing is actually broken by design, and is now deprecated.
- sometimes cvs log has a timezone in it (from Ludwig Nussel)
- better buffer size handling

2.1
- lots of fixes to get the thing working sufficienly for cvs2git
- main features
  - optionally detect and display ancestor branch information for
    new detected branches
  - never allow more than one revision of a file to be in a single
    patchset (this may disturb the patchset numbers for historical
    data :-(