@@ -11,7 +11,7 @@ cvsps - fast export the contents of a CVS repository
     [-r 'tag' [-r 'tag']] [-p 'directory'] [-A 'authormap'] [-R 'revmap']
     [-v] [-t] [--summary-first] [--diff-opts 'option string']
     [--debuglvl 'bitmask'] [-Z 'compression'] [--root 'cvsroot']
-    [-q] [--fast-export] [-k] [-T] [-V] ['module-path'] 
+    [-q] [--fast-export] [--reposurgeon] [-k] [-T] [-V] ['module-path']
 
 == DESCRIPTION ==
 cvsps is a program for generating 'patchset' information from a CVS
@@ -139,6 +139,11 @@ argument which set the base time; ech patchset will have an attributed
 date of as many seconds passs the base time as its ID.
 --fast-export::
 Emit the report as a git import stream.
+--reposurgeon::
+Emit for each commit a list of the CVS file:revision pairs composing it as a
+bzr-style commit property named "cvs-revisions".  From version 2.12
+onward, reposurgeon can interpret these and use them as hints for
+reference-lifting.
 -V::
 Emit the program version and exit.
 'module-path'::
@@ -280,7 +285,7 @@ wrong order.
 within the commit-matching time window, the order of commits reported 
 may be wrong.
 
-These problems cannot be fixed in 'cvsps'; they are inherent to CVS.
+These problems cannot be fixed in cvsps; they are inherent to CVS.
 
 == CVSPS LIMITATIONS ==
 cvsps may be unable to communicate with some extremely ancient CVS
